az-terraform/main.tf
resource "azurerm_resource_group" "vm_rg" {
  name     = var.resource_group_name_vm
  location = var.location
}

resource "azurerm_resource_group" "kv_rg" {
  name     = var.resource_group_name_kv
  location = var.location
}

resource "azurerm_resource_group" "network_rg" {
  name     = var.resource_group_name_network
  location = var.location
}

resource "azurerm_resource_group" "disk_encryption_rg" {
  name     = var.resource_group_name_disk_encryption
  location = var.location
}

resource "azurerm_virtual_network" "vm_network" {
  name                = "vm-network"
  address_space       = ["10.100.0.0/16", "2404:f800:8000:122::/64"]
  location            = azurerm_resource_group.network_rg.location
  resource_group_name = azurerm_resource_group.network_rg.name
  depends_on          = [azurerm_resource_group.network_rg]
}

resource "azurerm_network_security_group" "vm_nsg" {
  name                = "vm-nsg"
  location            = azurerm_resource_group.network_rg.location
  resource_group_name = azurerm_resource_group.network_rg.name
  depends_on          = [azurerm_resource_group.network_rg]
}

# resource "azurerm_network_security_rule" "allow_ssh" {
#   name                       = "AllowSSH"
#   priority                   = 1000
#   direction                  = "Inbound"
#   access                     = "Allow"
#   protocol                   = "Tcp"
#   source_address_prefixes    = var.allowed_ip_addresses
#   source_port_range          = "*"
#   destination_port_range     = "22"
#   destination_address_prefixes = azurerm_subnet.vm_subnet.address_prefixes
#   resource_group_name         = azurerm_resource_group.network_rg.name
#   network_security_group_name = azurerm_network_security_group.vm_nsg.name
# }

resource "azurerm_network_security_rule" "allow_icmp" {
  name                         = "AllowICMP"
  priority                     = 1010
  direction                    = "Inbound"
  access                       = "Allow"
  protocol                     = "Icmp"
  source_address_prefix        = "Internet"
  source_port_range            = "*"
  destination_port_range       = "*"
  destination_address_prefixes = ["10.100.1.0/24"]
  resource_group_name          = azurerm_resource_group.network_rg.name
  network_security_group_name  = azurerm_network_security_group.vm_nsg.name
  depends_on                   = [azurerm_network_security_group.vm_nsg, azurerm_subnet.vm_subnet]
}

resource "azurerm_network_security_rule" "allow_icmpv6" {
  name                         = "AllowICMPv6"
  priority                     = 1011
  direction                    = "Inbound"
  access                       = "Allow"
  protocol                     = "Icmp"
  source_address_prefix        = "Internet"
  source_port_range            = "*"
  destination_port_range       = "*"
  destination_address_prefixes = ["2404:f800:8000:122::/64"]
  resource_group_name          = azurerm_resource_group.network_rg.name
  network_security_group_name  = azurerm_network_security_group.vm_nsg.name
  depends_on                   = [azurerm_network_security_group.vm_nsg, azurerm_subnet.vm_subnet]
}

resource "azurerm_network_security_rule" "allow_https" {
  name                         = "AllowHTTPS"
  priority                     = 1020
  direction                    = "Inbound"
  access                       = "Allow"
  protocol                     = "Tcp"
  source_address_prefix        = "Internet"
  source_port_range            = "*"
  destination_port_range       = "443"
  destination_address_prefixes = ["10.100.1.0/24"]
  resource_group_name          = azurerm_resource_group.network_rg.name
  network_security_group_name  = azurerm_network_security_group.vm_nsg.name
  depends_on                   = [azurerm_network_security_group.vm_nsg, azurerm_subnet.vm_subnet]
}

resource "azurerm_network_security_rule" "allow_httpsv6" {
  name                         = "AllowHTTPSv6"
  priority                     = 1021
  direction                    = "Inbound"
  access                       = "Allow"
  protocol                     = "Tcp"
  source_address_prefix        = "Internet"
  source_port_range            = "*"
  destination_port_range       = "443"
  destination_address_prefixes = ["2404:f800:8000:122::/64"]
  resource_group_name          = azurerm_resource_group.network_rg.name
  network_security_group_name  = azurerm_network_security_group.vm_nsg.name
  depends_on                   = [azurerm_network_security_group.vm_nsg, azurerm_subnet.vm_subnet]
}

resource "azurerm_network_security_rule" "allow_https_udp" {
  name                         = "AllowHTTPS-UDP"
  priority                     = 1030
  direction                    = "Inbound"
  access                       = "Allow"
  protocol                     = "Udp"
  source_address_prefix        = "Internet"
  source_port_range            = "*"
  destination_port_range       = "443"
  destination_address_prefixes = ["10.100.1.0/24"]
  resource_group_name          = azurerm_resource_group.network_rg.name
  network_security_group_name  = azurerm_network_security_group.vm_nsg.name
  depends_on                   = [azurerm_network_security_group.vm_nsg, azurerm_subnet.vm_subnet]
}

resource "azurerm_network_security_rule" "allow_https_udpv6" {
  name                         = "AllowHTTPS-UDPv6"
  priority                     = 1031
  direction                    = "Inbound"
  access                       = "Allow"
  protocol                     = "Udp"
  source_address_prefix        = "Internet"
  source_port_range            = "*"
  destination_port_range       = "443"
  destination_address_prefixes = ["2404:f800:8000:122::/64"]
  resource_group_name          = azurerm_resource_group.network_rg.name
  network_security_group_name  = azurerm_network_security_group.vm_nsg.name
  depends_on                   = [azurerm_network_security_group.vm_nsg, azurerm_subnet.vm_subnet]
}

resource "azurerm_network_security_rule" "allow_tailscale_udp" {
  name                  = "AllowTailscale-UDP"
  priority              = 1040
  direction             = "Inbound"
  access                = "Allow"
  protocol              = "Udp"
  source_address_prefix = "Internet"
  source_port_range     = "*"
  # 41641/UDP is Tailscale's default direct-connection (DERP bypass) listen port.
  destination_port_range       = "41641"
  destination_address_prefixes = ["10.100.1.0/24"]
  resource_group_name          = azurerm_resource_group.network_rg.name
  network_security_group_name  = azurerm_network_security_group.vm_nsg.name
  depends_on                   = [azurerm_network_security_group.vm_nsg, azurerm_subnet.vm_subnet]
}

resource "azurerm_network_security_rule" "allow_tailscale_udpv6" {
  name                  = "AllowTailscale-UDPv6"
  priority              = 1041
  direction             = "Inbound"
  access                = "Allow"
  protocol              = "Udp"
  source_address_prefix = "Internet"
  source_port_range     = "*"
  # 41641/UDP is Tailscale's default direct-connection (DERP bypass) listen port.
  destination_port_range       = "41641"
  destination_address_prefixes = ["2404:f800:8000:122::/64"]
  resource_group_name          = azurerm_resource_group.network_rg.name
  network_security_group_name  = azurerm_network_security_group.vm_nsg.name
  depends_on                   = [azurerm_network_security_group.vm_nsg, azurerm_subnet.vm_subnet]
}

resource "azurerm_network_security_rule" "allow_tailscale_relay_udp" {
  name                  = "AllowTailscaleRelay-UDP"
  priority              = 1050
  direction             = "Inbound"
  access                = "Allow"
  protocol              = "Udp"
  source_address_prefix = "Internet"
  source_port_range     = "*"
  # UDP 45129 is used by Tailscale DERP relay connections.
  destination_port_range       = "45129"
  destination_address_prefixes = ["10.100.1.0/24"]
  resource_group_name          = azurerm_resource_group.network_rg.name
  network_security_group_name  = azurerm_network_security_group.vm_nsg.name
  depends_on                   = [azurerm_network_security_group.vm_nsg, azurerm_subnet.vm_subnet]
}

resource "azurerm_network_security_rule" "allow_tailscale_relay_udpv6" {
  name                         = "AllowTailscaleRelay-UDPv6"
  priority                     = 1051
  direction                    = "Inbound"
  access                       = "Allow"
  protocol                     = "Udp"
  source_address_prefix        = "Internet"
  source_port_range            = "*"
  destination_port_range       = "45129"
  destination_address_prefixes = ["2404:f800:8000:122::/64"]
  resource_group_name          = azurerm_resource_group.network_rg.name
  network_security_group_name  = azurerm_network_security_group.vm_nsg.name
  depends_on                   = [azurerm_network_security_group.vm_nsg, azurerm_subnet.vm_subnet]
}

resource "azurerm_subnet" "vm_subnet" {
  name                 = "vm-subnet"
  resource_group_name  = azurerm_resource_group.network_rg.name
  virtual_network_name = azurerm_virtual_network.vm_network.name
  address_prefixes     = ["10.100.1.0/24", "2404:f800:8000:122::/64"]

  service_endpoint {
    service = "Microsoft.KeyVault"
  }

  depends_on = [azurerm_virtual_network.vm_network]
}

resource "azurerm_subnet_network_security_group_association" "vm_subnet_nsg" {
  subnet_id                 = azurerm_subnet.vm_subnet.id
  network_security_group_id = azurerm_network_security_group.vm_nsg.id
  depends_on                = [azurerm_network_security_group.vm_nsg, azurerm_subnet.vm_subnet]
}

resource "random_string" "random" {
  length  = 16
  special = false
  upper   = false
  lower   = true
  numeric = true
}

resource "azurerm_public_ip" "vm_public_ip" {
  name                = "vps-rproxy-public-ip"
  location            = azurerm_resource_group.network_rg.location
  resource_group_name = azurerm_resource_group.network_rg.name
  allocation_method   = "Static"

  domain_name_label = "a${random_string.random.result}" # Ensure this is unique across Azure
  depends_on        = [azurerm_resource_group.network_rg]
}

resource "azurerm_public_ip" "vm_public_ipv6" {
  name                = "vps-rproxy-public-ipv6"
  location            = azurerm_resource_group.network_rg.location
  resource_group_name = azurerm_resource_group.network_rg.name
  allocation_method   = "Static"

  domain_name_label = "a6${random_string.random.result}" # Ensure this is unique across Azure
  ip_version        = "IPv6"
  depends_on        = [azurerm_resource_group.network_rg]
}


resource "azurerm_network_interface" "vm_nic" {
  name                = "vm-nic"
  location            = azurerm_resource_group.network_rg.location
  resource_group_name = azurerm_resource_group.network_rg.name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.vm_subnet.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.vm_public_ip.id
    primary                       = true
  }

  ip_configuration {
    name                          = "internal-ipv6"
    subnet_id                     = azurerm_subnet.vm_subnet.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.vm_public_ipv6.id
    private_ip_address_version    = "IPv6"
  }
  depends_on = [azurerm_subnet.vm_subnet, azurerm_public_ip.vm_public_ip, azurerm_public_ip.vm_public_ipv6]
}


resource "azurerm_key_vault" "kv" {
  name                          = "vps-rproxy-kv"
  depends_on                    = [azurerm_resource_group.kv_rg]
  location                      = azurerm_resource_group.kv_rg.location
  resource_group_name           = azurerm_resource_group.kv_rg.name
  tenant_id                     = data.azurerm_subscription.current.tenant_id
  sku_name                      = "standard"
  soft_delete_retention_days    = 7
  purge_protection_enabled      = true
  enabled_for_disk_encryption   = true
  enabled_for_deployment        = true
  public_network_access_enabled = true
  rbac_authorization_enabled    = true
  network_acls {
    default_action = "Deny"
    bypass         = "AzureServices"
    ip_rules       = var.allowed_ip_addresses
    virtual_network_subnet_ids = [
      azurerm_subnet.vm_subnet.id
    ]
  }
}

resource "azurerm_role_assignment" "service_principal_kv_access" {
  scope                = azurerm_key_vault.kv.id
  role_definition_name = "Key Vault Administrator"
  principal_id         = data.azuread_service_principal.current.object_id
}

ephemeral "tls_private_key" "admin" {
  algorithm = "ED25519"
}

resource "azurerm_key_vault_secret" "admin_ssh_private_key" {
  name             = "admin-ssh-private-key"
  value_wo         = ephemeral.tls_private_key.admin.private_key_openssh
  value_wo_version = 1
  key_vault_id     = azurerm_key_vault.kv.id
  content_type     = "ssh-private-key"
  depends_on       = [azurerm_role_assignment.service_principal_kv_access]
}

resource "azurerm_key_vault_secret" "admin_ssh_public_key" {
  name             = "admin-ssh-public-key"
  value_wo         = ephemeral.tls_private_key.admin.public_key_openssh
  value_wo_version = 1
  key_vault_id     = azurerm_key_vault.kv.id
  content_type     = "ssh-public-key"
  depends_on       = [azurerm_role_assignment.service_principal_kv_access]
}

data "azurerm_key_vault_secret" "admin_ssh_public_key" {
  name         = azurerm_key_vault_secret.admin_ssh_public_key.name
  key_vault_id = azurerm_key_vault.kv.id
  depends_on   = [azurerm_key_vault_secret.admin_ssh_public_key]
}

resource "azurerm_key_vault_key" "vm_disk_encryption" {
  name         = "vm-disk-encryption-key-1"
  key_vault_id = azurerm_key_vault.kv.id
  key_type     = "RSA"
  key_size     = 4096
  key_opts     = ["decrypt", "encrypt", "sign", "unwrapKey", "verify", "wrapKey"]
  depends_on   = [azurerm_key_vault.kv, azurerm_role_assignment.service_principal_kv_access]
}

resource "azurerm_disk_encryption_set" "vm_disk_encryption" {
  name                = "vm-disk-encryption-set-1"
  resource_group_name = azurerm_resource_group.disk_encryption_rg.name
  location            = azurerm_resource_group.disk_encryption_rg.location
  key_vault_key_id    = azurerm_key_vault_key.vm_disk_encryption.versionless_id

  auto_key_rotation_enabled = true

  identity {
    type = "SystemAssigned"
  }
  depends_on = [azurerm_key_vault_key.vm_disk_encryption]
}

resource "azurerm_role_assignment" "disk_encryption_set_kv_access" {
  scope                = azurerm_key_vault.kv.id
  role_definition_name = "Key Vault Crypto Service Encryption User"
  principal_id         = azurerm_disk_encryption_set.vm_disk_encryption.identity[0].principal_id
  depends_on           = [azurerm_key_vault.kv, azurerm_disk_encryption_set.vm_disk_encryption]
}

# # # Terraform configuration for Azure Linux Virtual Machine
# # # This VM will be used to run the reverse proxy

resource "azurerm_user_assigned_identity" "vm" {
  name                = "vps-rproxy-vm-identity"
  resource_group_name = azurerm_resource_group.vm_rg.name
  location            = azurerm_resource_group.vm_rg.location
}

resource "azurerm_role_assignment" "vm_tailscale_secret_access" {
  scope                = azurerm_key_vault.kv.id
  role_definition_name = "Key Vault Secrets User"
  principal_id         = azurerm_user_assigned_identity.vm.principal_id
}

# resource "azurerm_linux_virtual_machine" "vm" {
#   name                       = "vps-rproxy-vm"
#   resource_group_name        = azurerm_resource_group.vm_rg.name
#   location                   = azurerm_resource_group.vm_rg.location
#   size                       = "Standard_B2pls_v2"
#   admin_username             = var.vm_admin_username
#   encryption_at_host_enabled = true
#   identity {
#     type         = "UserAssigned"
#     identity_ids = [azurerm_user_assigned_identity.vm.id]
#   }
#   depends_on = [azurerm_role_assignment.vm_tailscale_secret_access]
#   # vtpm_enabled               = true
#   # secure_boot_enabled        = true

#   network_interface_ids = [azurerm_network_interface.vm_nic.id]

#   custom_data = base64encode(templatefile("${path.module}/cloudinit.tftpl", {
#     tailscale_secret_url = "https://${azurerm_key_vault.kv.name}.vault.azure.net/secrets/tailscale-auth-key"
#   }))

#   admin_ssh_key {
#     username   = var.vm_admin_username
#     public_key = data.azurerm_key_vault_secret.admin_ssh_public_key.value
#   }

#   os_disk {
#     caching                = "ReadWrite"
#     storage_account_type   = "StandardSSD_LRS"
#     disk_size_gb           = 32
#     disk_encryption_set_id = azurerm_disk_encryption_set.vm_disk_encryption.id
#   }

#   source_image_reference {
#     publisher = "Debian"
#     offer     = "debian-13"
#     sku       = "13-arm64"
#     version   = "latest"
#   }
# }
